# hstr-rs

./: README.md
fake_ncurses/src/: lib.rs
hstr/: Cargo.toml
hstr-rs/: Cargo.toml
hstr-rs/src/: cli.rs  main.rs  state.rs  ui.rs
hstr/src/: app.rs  cli.rs  main.rs  ui.rs  util.rs
rl/: Cargo.toml
src/: app.rs  main.rs  ui.rs
